--- a/resume.html
+++ b/resume.html
@@ -29,10 +29,12 @@
                 </div>
                 <div class="card-action">
                     <div class="chip">
-                        <img src="images/unity.png" style="max-width:32px; max-height:32px; width:auto; height:auto;"> Unity2D
+                        <!-- <img src="images/unity.png" style="max-width:32px; max-height:32px; width:auto; height:auto;">  -->
+                        Unity2D
                     </div>
                     <div class="chip">
-                        <img src="images/spine.png" style="max-width:32px; max-height:32px; width:auto; height:auto;"> Spine
+                        <!-- <img src="images/spine.png" style="max-width:32px; max-height:32px; width:auto; height:auto;">  -->
+                        Spine
                     </div>
                     <div class="chip">
                         动态光源
