--- a/resume.html
+++ b/resume.html
@@ -11,9 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <style>
-        .card .card-content {
+        /* .card .card-content {
             padding-bottom: 0px;
-        }
+        } */
 
         h3 {
             margin: 1rem 0 1rem 0;
@@ -22,11 +22,21 @@
         .card .card-content .card-title {
             margin-bottom: 0px;
         }
+        /* .section {
+            padding-top: 0;
+            padding-bottom: 0;
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+        } */
 
         blockquote {
             padding-left: 1rem;
         }
 
+        .timeline .event {
+            border-bottom: none;
+            position: relative;
+        }
     </style>
 </head>
 
@@ -39,33 +49,40 @@
         <section id="timeline" class="timeline-outer">
             <div class="row">
                 <div class="col s12">
-                    <ul class="timeline" style="padding-bottom:0">
+                    <ul class="timeline" style="padding-bottom:0; box-shadow:none">
                         <li class="event" data-date="2017/至今">
-                            <div class="card" style="box-shadow:none">
+                            <div class="card">
                                 <div class="card-image">
                                     <img src="images/character01.png">
                                 </div>
                                 <div class="card-content">
-                                    <span class="card-title">独立游戏制作人</span>
-                                    <blockquote>
-                                        <p><i class="tiny material-icons">chevron_right</i>独立撰写策划2D动作游戏方案</p>
-                                        <p><i class="tiny material-icons">chevron_right</i>利用美术外包资源制作伪3D人物骨骼动画模型</p>
-                                        <p><i class="tiny material-icons">chevron_right</i>在人物模型基础上制作多track并行的骨骼动画</p>
-                                        <p><i class="tiny material-icons">chevron_right</i>实现光照遮蔽效果的实时渲染</p>
-                                    </blockquote>
+                                    <span class="card-title">北京Forgiving Studio</span>
+                                    <div class="section">
+                                        <h3>独立游戏制作人 | 游戏策划 | 动作设计 | 主程</h3>
+                                        <p>该项目类型是2D横版ACT游戏，以细腻流畅的动作为特色。团队由我带领一名游戏策划，两名实习生组成。
+                                            <blockquote>
+                                                <p><i class="tiny material-icons">chevron_right</i>独立策划游戏方案，其中包含：动机，市场分析，玩法，美术需求，以及财务预测</p>
+                                                <p><i class="tiny material-icons">chevron_right</i>制作伪3D人物骨骼动画模型</p>
+                                                <p><i class="tiny material-icons">chevron_right</i>在人物模型基础上制作多轨道并行的骨骼动画</p>
+                                                <p><i class="tiny material-icons">chevron_right</i>实现光照遮蔽效果的实时渲染</p>
+                                            </blockquote>
+                                    </div>
                                 </div>
-                                <!-- <div class="card-action">
-                                        <div class="chip">
-                                            Unity2D
-                                        </div>
-                                        <div class="chip">
-                                            Spine
-                                        </div>
-                                    </div> -->
+                                <div class="card-action">
+                                    <div class="chip">
+                                        Unity
+                                    </div>
+                                    <div class="chip">
+                                        Spine骨骼动画
+                                    </div>
+                                    <div class="chip">
+                                        FFD
+                                    </div>
+                                </div>
                             </div>
                         </li>
                         <li class="event" data-date="2016/2017">
-                            <div class="card" style="box-shadow:none">
+                            <div class="card">
                                 <div class="card-content">
                                     <span class="card-title">北京贼鸥游戏</span>
                                     <div class="section">
@@ -73,30 +90,106 @@
                                         <blockquote>
                                             <p><i class="tiny material-icons">chevron_right</i>编写基于Unity引擎的Socket长连接模块</p>
                                             <p><i class="tiny material-icons">chevron_right</i>编写本地游戏数据流读取模块</p>
-                                            <p><i class="tiny material-icons">chevron_right</i>编写其他功能模块</p>
+                                            <p><i class="tiny material-icons">chevron_right</i>编写游戏逻辑模块</p>
                                         </blockquote>
                                     </div>
                                     <div class="divider"></div>
                                     <div class="section">
                                         <h3>Python服务器开发</h3>
+                                        <p>该服务器系统包含：游戏逻辑模块 - 基于Twisted框架，使用长连接与客户端通信；Web服务器 - 基于Tornado框架，用于后台分析处理玩家数据；数据库 -
+                                            基于MySQL和Redis
+                                        </p>
                                         <blockquote>
-                                            <p><i class="tiny material-icons">chevron_right</i>该服务器系统分为三部分：游戏逻辑部分基于Twisted框架，使用长连接与客户端通信；Web服务器部分基于Tornado框架，用于后台分析处理玩家数据；数据库部分基于MySQL和Redis</p>
                                             <p><i class="tiny material-icons">chevron_right</i>负责优化改进服务器系统</p>
                                             <p><i class="tiny material-icons">chevron_right</i>负责配合游戏玩法开发新功能</p>
                                         </blockquote>
                                     </div>
                                 </div>
-                                <!-- <div class="card-action">
-                                        <div class="chip">
-                                            Python
-                                        </div>
-                                        <div class="chip">
-                                            MySQL
-                                        </div>
-                                        <div class="chip">
-                                            Redis
-                                        </div>
-                                    </div> -->
+                                <div class="card-action">
+                                    <div class="chip">
+                                        Unity
+                                    </div>
+                                    <div class="chip">
+                                        Python
+                                    </div>
+                                    <div class="chip">
+                                        MySQL
+                                    </div>
+                                    <div class="chip">
+                                        Redis
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="event" data-date="2015/2016">
+                            <div class="card">
+                                <div class="card-content">
+                                    <span class="card-title">美国Epic Systems</span>
+                                    <p>全美最大的医疗信息系统提供商</p>
+                                    <div class="section">
+                                        <h3>医疗信息系统开发</h3>
+                                        <blockquote>
+                                            <p><i class="tiny material-icons">chevron_right</i>参与开发健康档案系统</p>
+                                            <p><i class="tiny material-icons">chevron_right</i>开发拓展非关系型数据库Caché</p>
+                                        </blockquote>
+                                    </div>
+                                </div>
+                                <div class="card-action">
+                                    <div class="chip">
+                                        VB
+                                    </div>
+                                    <div class="chip">
+                                        C#
+                                    </div>
+                                    <div class="chip">
+                                        InterSystems Caché
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="event" data-date="2013夏季">
+                            <div class="card">
+                                <div class="card-content">
+                                    <span class="card-title">美国Monster Worldwide（实习）</span>
+                                    <p>覆盖全球的求职网站</p>
+                                    <div class="section">
+                                        <h3>全文信息检索系统开发</h3>
+                                        <blockquote>
+                                            <p><i class="tiny material-icons">chevron_right</i>负责开发具有web界面的全文检索工具</p>
+                                            <p><i class="tiny material-icons">chevron_right</i>该工具被用于服务器内部日志检索，使开发者可以更高效地定位问题</p>
+                                        </blockquote>
+                                    </div>
+                                </div>
+                                <div class="card-action">
+                                    <div class="chip">
+                                        C#
+                                    </div>
+                                    <div class="chip">
+                                        Lucene.net
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="event" data-date="2012夏季">
+                            <div class="card">
+                                <div class="card-content">
+                                    <span class="card-title">北京网易（实习）</span>
+                                    <div class="section">
+                                        <h3>OAuth登录认证系统开发</h3>
+                                        <blockquote>
+                                            <p><i class="tiny material-icons">chevron_right</i>参与开发网易通行证OAuth API</p>
+                                            <p><i class="tiny material-icons">chevron_right</i>撰写支持Java，PHP等多平台的技术文档，为第三方开发者接入API提供指导</p>
+                                        </blockquote>
+                                    </div>
+                                </div>
+                                <div class="card-action">
+                                    <div class="chip">
+                                        Java
+                                    </div>
+                                    <div class="chip">
+                                        OAuth
+                                    </div>
+                                </div>
                             </div>
                         </li>
                     </ul>
