--- a/resume.html
+++ b/resume.html
@@ -5,12 +5,15 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="all" />
     <link type="text/css" rel="stylesheet" href="css/timeline.css" />
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <style>
+        html {
+            font-family: Consolas, Microsoft YaHei;
+        }
         /* .card .card-content {
             padding-bottom: 0px;
         } */
@@ -45,7 +48,41 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
 
+
+
+
     <div class="container">
+        <footer class="page-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col l6 s12">
+                        <h5>个人信息</h5>
+                        <ul>
+                            <li>范铮 / 男 / 1991</li>
+                            <li>本科：波士顿大学</li>
+                            <li>硕士：康奈尔大学</li>
+                            <li>工作年限：2年</li>
+                            <li>Github：
+                                <u>https://github.com/fan0114</u>
+                            </li>
+                            <li>目前居住地：北京</li>
+                            <li>期望职位：游戏策划，Unity前端</li>
+                            <li>期望薪资：税前月薪15k~20k</li>
+                            <li>期望城市：上海，杭州</li>
+                        </ul>
+                    </div>
+                    <div class="col l4 offset-l2 s12">
+                        <h5>联系方式</h5>
+                        <ul>
+                            <li>手机：18519534180</li>
+                            <li>Email：fan0114@gmail.com</li>
+                            <li>微信号：therealfanzheng</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
         <section id="timeline" class="timeline-outer">
             <div class="row">
                 <div class="col s12">
@@ -62,9 +99,11 @@
                                         <p>该项目类型是2D横版ACT游戏，以细腻流畅的动作为特色。团队由我带领一名游戏策划，两名实习生组成。
                                             <blockquote>
                                                 <p><i class="tiny material-icons">chevron_right</i>独立策划游戏方案，其中包含：动机，市场分析，玩法，美术需求，以及财务预测</p>
+                                                <p><i class="tiny material-icons">chevron_right</i>与美术外包沟通交流画面风格以及设定细节，并要求双方在劳务合同约束下完成工作</p>
                                                 <p><i class="tiny material-icons">chevron_right</i>制作伪3D人物骨骼动画模型</p>
                                                 <p><i class="tiny material-icons">chevron_right</i>在人物模型基础上制作多轨道并行的骨骼动画</p>
-                                                <p><i class="tiny material-icons">chevron_right</i>实现光照遮蔽效果的实时渲染</p>
+                                                <p><i class="tiny material-icons">chevron_right</i>实现实时渲染光照遮蔽效果，并可单独对光照进行模糊</p>
+                                                <p><i class="tiny material-icons">chevron_right</i>实现带有deadzone的镜头动态跟随，并使镜头动作柔和化</p>
                                             </blockquote>
                                     </div>
                                 </div>
@@ -129,7 +168,7 @@
                                     <div class="section">
                                         <h3>医疗信息系统开发</h3>
                                         <blockquote>
-                                            <p><i class="tiny material-icons">chevron_right</i>参与开发健康档案系统</p>
+                                            <p><i class="tiny material-icons">chevron_right</i>负责开发健康档案系统</p>
                                             <p><i class="tiny material-icons">chevron_right</i>开发拓展非关系型数据库Caché</p>
                                         </blockquote>
                                     </div>
